--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Language Translation</title>
 </head>
 <body>
-    <label for="languageSelect1">Select Language 1:</label>
+    <label for="languageSelect1"> me:</label>
     <select id="languageSelect1"></select>
 
-    <label for="languageSelect2">Select Language 2:</label>
+    <label for="languageSelect2">you:</label>
     <select id="languageSelect2"></select>
 
     <ul id="translationList">
